--- a/index.html
+++ b/index.html
@@ -1,9 +1,46 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Introduction</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Parag Gupta | Dynamic Webpage</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hi, my name is Parag</h1>
+    <header>
+        <h1 id="name">Parag Gupta</h1>
+        <nav>
+            <ul>
+                <li><a href="#videos">Videos</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#logos">Logos</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="videos">
+        <h2>Dynamic Videos</h2>
+        <div class="video-container" id="video-section">
+            <!-- Videos will be dynamically added here -->
+        </div>
+    </section>
+
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Hi, I'm Parag Gupta, a passionate developer and creative individual who loves to explore web design and dynamic content.</p>
+    </section>
+
+    <section id="logos">
+        <h2>Dynamic Logos</h2>
+        <div class="logo-container" id="logo-section">
+            <!-- Logos will be dynamically added here -->
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Parag Gupta</p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
