--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Parag Gupta | Projects</title>
+    <title>Parag Gupta | Elegant Projects</title>
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,45 +17,48 @@
         </video>
     </div>
 
+    <!-- Dark overlay for better contrast -->
+    <div class="overlay"></div>
+
     <!-- Overlay content -->
     <div class="overlay-content">
         <h1>Parag Gupta</h1>
-        <p>Welcome to my webpage</p>
+        <p>Innovative Software & Hardware Solutions</p>
 
-        <!-- Tabs for Projects -->
+        <!-- Navigation Tabs -->
         <div class="tab-container">
             <button class="tab-btn" onclick="openTab(event, 'software')">Software Projects</button>
             <button class="tab-btn" onclick="openTab(event, 'hardware')">Hardware Projects</button>
+            <button class="tab-btn" onclick="openTab(event, 'about')">About</button>
         </div>
 
         <!-- Tab content -->
         <div id="software" class="tab-content">
             <h2>Software Projects</h2>
             <ul>
-                <li>Project 1: Web Application</li>
-                <li>Project 2: Mobile App Development</li>
-                <li>Project 3: Data Visualization Tool</li>
+                <li>Project 1: AI-powered Web App</li>
+                <li>Project 2: Mobile Game Development</li>
+                <li>Project 3: Cloud Integration Platform</li>
             </ul>
         </div>
 
         <div id="hardware" class="tab-content">
             <h2>Hardware Projects</h2>
             <ul>
-                <li>Project 1: IoT Device</li>
-                <li>Project 2: Robotics System</li>
-                <li>Project 3: Home Automation Setup</li>
+                <li>Project 1: IoT Smart Device</li>
+                <li>Project 2: Robotics for Automation</li>
+                <li>Project 3: Wearable Tech</li>
             </ul>
+        </div>
+
+        <div id="about" class="tab-content">
+            <h2>About Me</h2>
+            <p>Hi, I'm Parag Gupta, a tech enthusiast with a passion for building cutting-edge software and hardware solutions. Whether it's creating intuitive web applications or innovative hardware systems, I'm driven by a desire to solve complex challenges and create impact through technology.</p>
         </div>
     </div>
 
-    <!-- About Section -->
-    <section id="about" class="about-section">
-        <h2>About Me</h2>
-        <p>Hello! I'm Parag Gupta, a passionate software and hardware enthusiast with a deep love for creating innovative solutions in both domains. I enjoy building applications and systems that solve real-world problems. Feel free to explore my projects in software and hardware.</p>
-    </section>
-
     <footer>
-        <p>&copy; 2024 Parag Gupta</p>
+        <p>&copy; 2024 Parag Gupta | All Rights Reserved</p>
     </footer>
 
     <script src="script.js"></script>
