--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <title>Parag Gupta | Elegant Projects</title>
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+    <!-- Font Awesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Fullscreen background video -->
     <div class="video-background">
         <video autoplay muted loop id="bg-video">
-            <source src="video.mp4" type="video/mp4">
+            <source src="background-video.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
@@ -25,34 +27,40 @@
         <h1>Parag Gupta</h1>
         <p>Innovative Software & Hardware Solutions</p>
 
-        <!-- Navigation Tabs -->
+        <!-- Navigation Tabs with Icons -->
         <div class="tab-container">
-            <button class="tab-btn" onclick="openTab(event, 'software')">Software Projects</button>
-            <button class="tab-btn" onclick="openTab(event, 'hardware')">Hardware Projects</button>
-            <button class="tab-btn" onclick="openTab(event, 'about')">About</button>
+            <button class="tab-btn" onclick="openTab(event, 'software')">
+                <i class="fas fa-laptop-code"></i> Software Projects
+            </button>
+            <button class="tab-btn" onclick="openTab(event, 'hardware')">
+                <i class="fas fa-microchip"></i> Hardware Projects
+            </button>
+            <button class="tab-btn" onclick="openTab(event, 'about')">
+                <i class="fas fa-user"></i> About
+            </button>
         </div>
 
         <!-- Tab content -->
         <div id="software" class="tab-content">
-            <h2>Software Projects</h2>
+            <h2><i class="fas fa-laptop-code"></i> Software Projects</h2>
             <ul>
-                <li>Project 1: AI-powered Web App</li>
-                <li>Project 2: Mobile Game Development</li>
-                <li>Project 3: Cloud Integration Platform</li>
+                <li><i class="fas fa-check"></i> Project 1: AI-powered Web App</li>
+                <li><i class="fas fa-check"></i> Project 2: Mobile Game Development</li>
+                <li><i class="fas fa-check"></i> Project 3: Cloud Integration Platform</li>
             </ul>
         </div>
 
         <div id="hardware" class="tab-content">
-            <h2>Hardware Projects</h2>
+            <h2><i class="fas fa-microchip"></i> Hardware Projects</h2>
             <ul>
-                <li>Project 1: IoT Smart Device</li>
-                <li>Project 2: Robotics for Automation</li>
-                <li>Project 3: Wearable Tech</li>
+                <li><i class="fas fa-check"></i> Project 1: IoT Smart Device</li>
+                <li><i class="fas fa-check"></i> Project 2: Robotics for Automation</li>
+                <li><i class="fas fa-check"></i> Project 3: Wearable Tech</li>
             </ul>
         </div>
 
         <div id="about" class="tab-content">
-            <h2>About Me</h2>
+            <h2><i class="fas fa-user"></i> About Me</h2>
             <p>Hi, I'm Parag Gupta, a tech enthusiast with a passion for building cutting-edge software and hardware solutions. Whether it's creating intuitive web applications or innovative hardware systems, I'm driven by a desire to solve complex challenges and create impact through technology.</p>
         </div>
     </div>
