--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
             <h2><i class="fas fa-microchip"></i> Hardware Projects</h2>
             <ul>
                 <li><i class="fas fa-check"></i> Project 1: IoT Smart Device</li>
-                <li><i class="fas fa-check"></i> Project 2: Robotics for Automation</li>
-                <li><i class="fas fa-check"></i> Project 3: Wearable Tech</li>
+                <li><i class="fas fa-check\"></i> Project 2: Robotics for Automation</li>
+                <li><i class="fas fa-check\"></i> Project 3: Wearable Tech</li>
             </ul>
         </div>
 
