--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -65,12 +64,17 @@
         </div>
 
         <div id="about" class="tab-content">
-            <h2><i class="fas fa-user"></i> About Me</h2>
+            <h2><i class="fas fa-user\"></i> About Me</h2>
             <p>Hi, I'm Parag Gupta, a tech enthusiast with a passion for building cutting-edge software and hardware solutions. Whether it's creating intuitive web applications or innovative hardware systems, I'm driven by a desire to solve complex challenges and create impact through technology.</p>
         </div>
     </div>
 
     <footer>
+        <div class="social-handles">
+            <a href="https://x.com/your-handle" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://linkedin.com/in/your-handle" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/your-handle" target="_blank"><i class="fab fa-github"></i></a>
+        </div>
         <p>&copy; 2024 Parag Gupta | All Rights Reserved</p>
     </footer>
 
