--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <footer>
         <div class="social-handles">
             <a href="https://x.com/your-handle" target="_blank"><i class="fab fa-twitter"></i></a>
-            <a href="https://linkedin.com/in/your-handle" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/parag-gupta-54ba94276?trk=contact-info" target="_blank"><i class="fab fa-linkedin"></i></a>
             <a href="https://github.com/your-handle" target="_blank"><i class="fab fa-github"></i></a>
         </div>
         <p>&copy; 2024 Parag Gupta | All Rights Reserved</p>
