--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     <footer>
         <div class="social-handles">
-            <a href="https://x.com/your-handle" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://x.com/ParagGupta51994?t=lQsDNRfDgOLsA6uCfj_hpA&s=09" target="_blank"><i class="fab fa-twitter"></i></a>
             <a href="https://www.linkedin.com/in/parag-gupta-54ba94276?trk=contact-info" target="_blank"><i class="fab fa-linkedin"></i></a>
             <a href="https://github.com/your-handle" target="_blank"><i class="fab fa-github"></i></a>
         </div>
