--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <h2><i class="fas fa-laptop-code"></i> Software Projects</h2>
             <ul>
                 <li><i class="fas fa-check"></i> Project 1: AI-powered Web App</li>
-                <li><i class="fas fa-check"></i> Project 2: Mobile Game Development</li>
+                <li><i class="fas fa-check"></i> Project 2: <a href="https://github.com/Parag949/invert-pdf-color">Invert PDF Color Project</a></li>
                 <li><i class="fas fa-check"></i> Project 3: Cloud Integration Platform</li>
             </ul>
         </div>
